k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autopilot-micro-ingress
  namespace: autopilot
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://app.autopilot.com.br'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, PUT, DELETE, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-micro-token,x-api-key'
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - micro.autopilot.com.br
      secretName: micro-autopilot-tls
  rules:
    - host: micro.autopilot.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autopilot-micro
                port:
                  number: 3005
